# dcc

./: .gitignore  AGENTS.md  README.md  pyproject.toml
config/: sources.json
docs/: source_inventory.md
scripts/: build_digest.py  compare_summarizers.py  run_once.py  summarize_document.py  summarize_relevant_documents.py  validate_gemini_live.py
src/data_center_digest/: __init__.py  config.py  db.py  digest.py  html_links.py  laserfiche.py  pdf_text.py  relevance.py  run_once.py  summarizer.py
tests/: test_digest.py  test_pdf_text.py  test_run_once.py  test_summarizer.py  test_validate_gemini_live.py
