[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "data-center-ceramics"
version = "0.1.0"
description = "One-source monitor for Loudoun County meeting documents related to data centers."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ocrmac>=1.0.1",
    "pillow>=12.1.1",
    "pypdf>=6.9.1",
    "pypdfium2>=5.6.0",
    "pytesseract>=0.3.13",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
